--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -28,7 +28,7 @@ log4j.logger.org.mybatis=INFO
 log4j.category.org.springframework = INFO
 
 
-log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql=INFO
 log4j.logger.com.holytax=INFO
 
 #disable log
